<resources>

    <string name="app_name">SharedPref Login Info</string>
    <string name="second_activity">2nd Activity</string>
    <string name="first_activity">2st Activity</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="user_password">Password</string>
    <string name="user_name">UserName</string>
    <string name="login_button">Login</string>
    <string name="textview_username">Username</string>
    <string name="logout_button">Logout</string>
    <string name="textview_password">Password</string>
    <string name="highlight_text_password">Password:</string>
    <string name="password_label">Password:</string>
    <string name="username">username</string>
    <string name="username_label">Username:</string>
    <string name="password">password</string>
    <string name="button_login_info">Login Info</string>
    <string name="go_back_button">Go Back</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="welcome_you_are_successfully_logged_in">Welcome! \n You are successfully logged in...</string>

</resources>