<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textViewUsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/username_label"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="71dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="56dp"
        android:text="@string/username"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/textViewUsernameLabel"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/password_label"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsernameLabel"
        tools:layout_editor_absoluteX="73dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/textViewPasswordLabel"
        app:layout_constraintTop_toBottomOf="@+id/textUsername"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/back_button"
        style="@style/RoundButton"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:background="@drawable/button_shadow"
        android:text="@string/go_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPassword" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="textPassword,textViewPasswordLabel" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="textUsername,textViewUsernameLabel" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="textViewUsernameLabel,textPassword,back_button,textViewPasswordLabel,textUsername" />

</androidx.constraintlayout.widget.ConstraintLayout>
